--- a/style.css
+++ b/style.css
@@ -34,31 +34,32 @@ html{
                 justify-content: center;
                 align-items: center;
                 width:100%;
+                
         }
         .header_logo img{
                width: 70px;
                margin-right: auto;
         }
-        .taggg{
-            display: flex;
-            flex-direction: column;
-            margin-left: -20px;
-        }
-        .taggg p{
-              margin-right: 20px
-        }
-        .header_logo span{
-             margin-right: auto;
-             font-size: 50px;
-             margin-top: 10px;
-             margin-left: 15px;
-        }
-        .header_logo h3{
-             margin-right: 200px;
-             font-size: 25px;
-             margin-left: 20px;
-             margin-top: 5px;
-        }
+.header_page{
+       display: flex;
+       justify-content: left;
+       height: auto;
+       align-items: center;
+       margin-left: 10px;
+       margin-top: 18px;
+       gap: 10px;
+       width: 100%;
+}
+.header_page span{
+       font-size: 30px;
+}
+.header_page h3{
+        font-size: 20px;
+}
+.taggg{
+     margin-left: auto;
+     margin-right: 20px;
+}
         .buttonmem:active {
 
   background-color: transparent;
