--- a/style.css
+++ b/style.css
@@ -422,5 +422,85 @@ margin-left: 5px;
        width: 150px;
        height: 45px;
 }
+.meet-greet{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 30px;
+}
+.meet-greet-container{
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        background: #B56AFF54;
+        border: 1px solid #000000C7;
+        
+        justify-content: center;
+        align-items: center;
+        height: auto;
+}
+.box-session{
+        display: flex;
+        width: 100%;
+}
+.box-box-session span{
+        font-size: 20px;
+}
+.box-box-session{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        border: 1px solid #0000009C;
+        width: 90px;
+        background: #B56AFF54;
+        border-radius: 0px 0px 0px 0px;
+}
+.box-room{
 
+        display: flex;
+
+        width: 100%;
+}
+.box-box-room span{
+        font-size: 20px;
+}
+.box-box-room{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        border: 1px solid #0000009C;
+        width: 90px;
+        background: #FFFFFF;
+}
+.box-box-room img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #9958FF;
+}
+.box-box-room p{
+        font-size: 18px;
+        margin-top: 5px;
+        color: #9958FF;
+        font-weight: 600;
+}
+.text-mng{
+
+   display: flex;
+   margin-right: auto;
+   flex-direction: column;
+   margin-left: 20px;
+   margin-top: 20px;
+}
+.text-mng h1{
+   font-size: 25px;
+   font-weight: 500;
+}
 }
