--- a/style.css
+++ b/style.css
@@ -248,7 +248,10 @@ html{
      background: transparent;
      width: 100%;
 }
-
+.program-detail p{
+       color: #FF2828;
+       font-weight: 500;
+}
 .program-h-box img{
     width: 170px;
     height: 170px;
