--- a/style.css
+++ b/style.css
@@ -630,4 +630,79 @@ margin-left: 5px;
    font-size: 25px;
    font-weight: 500;
 }
+.member-detail-page{
+        
+               position: fixed;
+               top: 0%;
+               left: 50%;
+               transform: translate(-50%, 0%);
+               width: 100%;
+               height: 65px;
+               
+               z-index: 9999;
+               background: transparent;
+        
+}
+.member-detail-container{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        background: #FFFBF3;
+        height: 200px;
+        margin-top: 65px;
+        box-shadow: rgba(64, 60, 67, 0.3) 1px 1px 8px 0px, rgba(64, 60, 67, 0.15) 0px 0px 0px 0px;;
+}
+.member-detail-box{
+       display: flex;
+       justify-content: left;
+       align-items: center;
+       width: 90%;
+       background: #FFFBF3;
+       border-radius: 15px;
+       
+       height: 23vh;
+       box-shadow: rgba(64, 60, 67, 0.3) 0px 2px 3px 0px, rgba(64, 60, 67, 0.15) 3px 3px 8px 3px;
+}
+.member-detail-box img{
+        width: 90px;
+
+    height: 130px;
+    
+    border-radius: 0%;
+    margin-left: 15px;
+    object-fit: cover;
+    border: 8px solid #9958FF;
+}
+.nama-member{
+        display: flex;
+        flex-direction: column;
+        margin-left: 15px;
+        margin-bottom: auto;
+        margin-top: 25px;
+}
+.nama-member span{
+        font-weight: 500;
+        font-size: 19px;
+}
+.nav-member{
+        margin-top: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+}
+.nav-member p{
+        font-size: 23px;
+        font-weight: 500;
+        color: #9958FF;
+}
+.bottom-pick-det{
+        width: 70px;
+        background: #9958FF;
+        height: 4px;
+        border-radius: 2px 2px 0px 0px;
+        z-index: 9999;
+}
 }
